user model user services auth services added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   google_fonts: ^7.0.2
   smooth_page_indicator: ^2.0.1
   dotted_border: ^2.1.0
+  firebase_core: ^4.4.0
+  cloud_firestore: ^6.1.2
+  firebase_auth: ^6.1.4
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
